@@ -2,6 +2,8 @@ rel
 * fixing bug in calculating team ranks
 * limit for display countdowns is configurable in global ini file
 * new type of clues - marked with question mark
+* check doubled request when spending coin
+* display solutions on HQ screen 
 
 rel 0.1.2
 * HQ: Reworked the overview table
